<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_attr_sel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".AttributeSelectionFragment">

    <TextView
        android:id="@+id/tv_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/tv_heading_attr_sel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_AngDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:text="@string/btn_ang_dist"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_XYDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:text="@string/btn_xy_dist"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:text="@string/btn_back"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>