<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPointCreatorFragment">

    <TextView
        android:id="@+id/tv_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/tv_heading_new_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_x"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_X"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_y"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_CreatePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:text="@string/btn_create_point"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack"
                android:text="@string/btn_back"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>