<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".PointCreatorFragment">

    <TextView
        android:id="@+id/tv_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/tv_heading_creation"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_New"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:text="@string/btn_new"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btn_Relative"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@color/colorBlack"
            android:text="@string/btn_relative"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btn_Export_Points"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@color/colorBlack"
            android:text="@string/btn_export_points"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>